# shieldpay

./: .gitignore  RAILWAY_DEPLOY.md  README.md
.claude/: launch.json
fraud_detection/: .gitignore  pyproject.toml  requirements.txt
fraud_detection/configs/data/: ieee_cis.yaml  synthetic_relational.yaml
fraud_detection/docs/: DATASETS.md  INSTALL_PYG.md
fraud_detection/fraud_detection/: __init__.py  cli.py  schema.py
fraud_detection/fraud_detection/data/: preprocessing.py
fraud_detection/fraud_detection/data/adapters/: __init__.py  base.py  ieee_cis.py  registry.py  synthetic_relational.py
fraud_detection/fraud_detection/domains/: README.md
fraud_detection/fraud_detection/evaluation/: evaluate.py  metrics.py  report.py
fraud_detection/fraud_detection/serving/: __init__.py  ensemble_predictor.py
fraud_detection/fraud_detection/statement_analysis/: statement_analyzer.py
fraud_detection/fraud_detection/training/: common.py  train_aml.py  train_ensemble.py  train_gan.py  train_gbdt.py  train_gnn.py  train_hgnn.py  train_hypergraph.py
fraud_detection/fraud_detection/utils/: io.py  seed.py
fraud_detection/tests/: test_aml_generator.py  test_aml_graph.py  test_aml_patterns.py  test_domain_graph_equivalence.py  test_ensemble.py  test_graph_builder.py  test_hypergraph.py  test_ieee_cis_adapter.py  test_metrics.py  test_models_smoke.py  test_schema_adapters.py  test_serving.py  test_statement_analyzer.py  test_statement_anomaly_scoring.py  test_statement_csv_parser.py  test_statement_patterns.py  test_statement_pdf_parser.py  test_train_aml_smoke.py
(+71 files in other folders)
